--- a/.github/workflows/on-push-pipeline.yml
+++ b/.github/workflows/on-push-pipeline.yml
@@ -66,7 +66,7 @@ jobs:
         with:
           name: jacoco-unit-tests-exec
           path: target/jacoco-unit-tests.exec
-#
+
   # Phase 2: Setup Docker Images and Run Integration Tests
   integration-tests:
     runs-on: ubuntu-latest
@@ -127,43 +127,43 @@ jobs:
           name: jacoco-test-report
           path: target/site/jacoco/jacoco.xml
 
-  # Phase 3: SonarCloud Analysis
-  sonarcloud-analysis:
-    runs-on: ubuntu-latest
-    needs: integration-tests
-    steps:
-      - name: Checkout Source Code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Set up JDK and Cache Maven Dependencies
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'corretto'
-          java-version: 21
-          cache: maven
-
-      - name: Download Test Coverage Report
-        uses: actions/download-artifact@v3
-        with:
-            name: jacoco-test-report
-            path: target/site/jacoco
-
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-
-      - name: Run SonarCloud Analysis
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-            mvn package -DskipUnitTests=true sonar:sonar \
-              -Dsonar.projectKey=jcondotta_bank-account-management \
-              -Dsonar.organization=jcondotta \
-              -Dsonar.host.url=https://sonarcloud.io \
-              -Dsonar.token=${{ secrets.SONAR_TOKEN }} \
-              -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+#  # Phase 3: SonarCloud Analysis
+#  sonarcloud-analysis:
+#    runs-on: ubuntu-latest
+#    needs: integration-tests
+#    steps:
+#      - name: Checkout Source Code
+#        uses: actions/checkout@v3
+#        with:
+#          fetch-depth: 0
+#
+#      - name: Set up JDK and Cache Maven Dependencies
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: 'corretto'
+#          java-version: 21
+#          cache: maven
+#
+#      - name: Download Test Coverage Report
+#        uses: actions/download-artifact@v3
+#        with:
+#            name: jacoco-test-report
+#            path: target/site/jacoco
+#
+#      - name: Cache SonarCloud packages
+#        uses: actions/cache@v4
+#        with:
+#          path: ~/.sonar/cache
+#          key: ${{ runner.os }}-sonar
+#          restore-keys: ${{ runner.os }}-sonar
+#
+#      - name: Run SonarCloud Analysis
+#        env:
+#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#        run: |
+#            mvn package -DskipUnitTests=true sonar:sonar \
+#              -Dsonar.projectKey=jcondotta_bank-account-management \
+#              -Dsonar.organization=jcondotta \
+#              -Dsonar.host.url=https://sonarcloud.io \
+#              -Dsonar.token=${{ secrets.SONAR_TOKEN }} \
+#              -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
