--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,36 +1,17 @@
 micronaut:
   server:
-    port: 8090
-  router:
-    static-resources:
-      swagger:
-        paths: classpath:META-INF/swagger
-        mapping: /swagger/**
-      swagger-ui:
-        paths: classpath:META-INF/swagger/views/swagger-ui
-        mapping: /swagger-ui/**
-  openapi:
-    enabled: true
-    url: /openapi
-    filename: bank-accounts-swagger-spec
-    info:
-      title: "Bank Accounts API"
-      version: "1.0.0"
-      description: "API documentation for the Bank Accounts microservice."
-    swagger:
-      ui:
-        path: /swagger-ui
+    port: 8091
 
 aws:
   access-key-id: ${AWS_ACCESS_KEY_ID}
   secret-key: ${AWS_SECRET_ACCESS_KEY}
   region: ${AWS_DEFAULT_REGION}
-  dynamodb:
-    tables:
-      banking-entities:
-        table-name: ${AWS_DYNAMODB_BANKING_ENTITIES_TABLE_NAME}
+  sqs:
+    queues:
+      card-application:
+        queue-url: ${AWS_SQS_CARD_APPLICATION_QUEUE_URL}
+
   sns:
     topics:
       bank-account-created:
-        topic-name: ${AWS_SNS_BANK_ACCOUNT_CREATED_TOPIC_NAME}
         topic-arn: ${AWS_SNS_BANK_ACCOUNT_CREATED_TOPIC_ARN}
